log
Thu, Mar 20, 2025  5:17:05 PM: 
 tests:  0|5
total_score: 0/70
3f6cb15
Thu, Mar 20, 2025  5:52:01 PM: 
 exercises.c | 23 ++++++++++++++++++++++-
 1 file changed, 22 insertions(+), 1 deletion(-)
In file included from test.c:5:0:
exercises.c: In function 'sumaLista':
exercises.c:61:17: error: initialization makes integer from pointer without a cast [-Werror=int-conversion]
    int elemento=first(L);
                 ^~~~~
exercises.c:62:18: error: comparison between pointer and integer [-Werror]
    while(elemento!=NULL){
                  ^~
exercises.c:64:15: error: assignment makes integer from pointer without a cast [-Werror=int-conversion]
       elemento=next(L);
               ^
exercises.c: In function 'eliminaElementos':
exercises.c:82:19: error: comparison between pointer and integer [-Werror]
       if (elemento==elem){
                   ^~
exercises.c: In function 'copia_pila':
exercises.c:98:21: error: initialization from incompatible pointer type [-Werror=incompatible-pointer-types]
    Stack* aux_pilar=create_stack;
                     ^~~~~~~~~~~~
exercises.c:98:11: error: unused variable 'aux_pilar' [-Werror=unused-variable]
    Stack* aux_pilar=create_stack;
           ^~~~~~~~~
cc1.exe: all warnings being treated as errors
Compilation failed
9409023
Thu, Mar 20, 2025  5:53:59 PM: 
 exercises.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
In file included from test.c:5:0:
exercises.c: In function 'sumaLista':
exercises.c:61:17: error: initialization makes integer from pointer without a cast [-Werror=int-conversion]
    int elemento=first(L);
                 ^~~~~
exercises.c:62:18: error: comparison between pointer and integer [-Werror]
    while(elemento!=NULL){
                  ^~
exercises.c:64:15: error: assignment makes integer from pointer without a cast [-Werror=int-conversion]
       elemento=next(L);
               ^
exercises.c: In function 'eliminaElementos':
exercises.c:82:19: error: comparison between pointer and integer [-Werror]
       if (elemento==elem){
                   ^~
exercises.c: In function 'copia_pila':
exercises.c:98:21: error: initialization from incompatible pointer type [-Werror=incompatible-pointer-types]
    Stack* aux_pilar=create_stack;
                     ^~~~~~~~~~~~
exercises.c:98:11: error: unused variable 'aux_pilar' [-Werror=unused-variable]
    Stack* aux_pilar=create_stack;
           ^~~~~~~~~
test.c: In function 'test_crea_lista':
test.c:61:15: error: implicit declaration of function 'crea_lista' [-Werror=implicit-function-declaration]
     List* L = crea_lista();
               ^~~~~~~~~~
test.c:61:15: error: initialization makes pointer from integer without a cast [-Werror=int-conversion]
cc1.exe: all warnings being treated as errors
Compilation failed
408cda7
